detail page for a book.

--- a/mockup/detail.html
+++ b/mockup/detail.html
@@ -25,7 +25,15 @@ Copyright: open Summer of code 2015
 
     <div class="container text-center" id="content">
         <div class="row">
+            <div class="col-md-6 bookcover">
+                <img src="content/images/bookcovers/Harry_Potter_EDV.png" alt="Cover">
+            </div>
 
+            <div class="col-md-6 information">
+                <h1 class="title">Harry Potter en de Vuurbeker</h1>
+                <p class="synopsis">Als tovenaar-in-de-dop Harry Potter deelneemt aan een internationaal tovenaarstoernooi, dreigt er onverwacht gevaar. (samenvatting)</p>
+                <p class="writtenby">Geschreven door <strong>J.K. Rowling</strong></p>
+            </div>
         </div>
     </div>
 </div>
