--- a/mockup/index.html
+++ b/mockup/index.html
@@ -35,9 +35,22 @@ Copyright: open Summer of code 2015
 
         <div class="row">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"></div>
-            <div class="col-xs-1 col-sm-1 col-md-1 col-md-offset-1 col-lg-1 btn btn-no text-center"><img src="content/images/cross-wrong.png" class="resize"></div>
+            <div class="col-xs-1 col-sm-1 col-md-1 col-md-offset-1 col-lg-1">
+                <div class="button">
+                    <div class="icon like">
+                        <svg enable-background="new 0 0 32 32" id="heart" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path id="like" d="M22.229,4.514c-2.547,0-4.85,1.334-5.919,3.414c-1.07-2.079-3.401-3.414-5.948-3.414  c-3.981,0-9.319,3.209-6.888,11.963C6.251,25.034,16.31,30.065,16.31,30.063c0,0.002,10.044-5.029,12.821-13.586  C31.562,7.723,26.209,4.514,22.229,4.514z"/></svg>
+                    </div>
+                </div>
+
+            </div>
             <div class="col-xs-2 col-sm-2 col-md-1 col-lg-2"></div>
-            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 btn btn-yes text-center"><img src="content/images/check-correct.png" class="resize"></div>
+            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 ">
+                <div class="button">
+                    <div class="icon dislike">
+                        <div id="cross"></div>
+                    </div>
+                </div>
+            </div>
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"></div>
         </div>
     </div>
