extra styling for detail page

--- a/mockup/detail.html
+++ b/mockup/detail.html
@@ -10,7 +10,7 @@ Copyright: open Summer of code 2015
     <link href="styles/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="styles/style.css" rel="stylesheet">
 </head>
-<body class="suggestion">
+<body class="detail">
 
 <div class="page-wrapper" id="page-wrapper">
     <!--header-->
