--- a/mockup/index.html
+++ b/mockup/index.html
@@ -11,6 +11,8 @@ Copyright: open Summer of code 2015
 
     <link href="styles/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="styles/style.css" rel="stylesheet">
+    <link href="styles/swipe.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css">
 </head>
 <body class="startpage">
 
@@ -29,19 +31,29 @@ Copyright: open Summer of code 2015
     <div class="container text-center" id="content">
         <div class="row">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 "></div>
-            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 picture-container"><img src="content/images/test-picture.jpg" alt="test" class="resize"/></div>
+            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 picture-container">
+              <div id="container">
+                <div class="buddy" style="display: block;"><div class="avatar"  style="display: block; background-image: url(content/images/test-picture.jpg)"></div></div>
+                <div class="buddy"><div class="avatar" style="display: block; background-image: url(content/images/test-picture.jpg)"></div></div>
+                <div class="buddy"><div class="avatar" style="display: block; background-image: url(content/images/test-picture.jpg)"></div></div>
+                <div class="buddy"><div class="avatar" style="display: block; background-image: url(content/images/test-picture.jpg)"></div></div>
+              </div>
+            </div>
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 "></div>
         </div>
 
         <div class="row">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"></div>
-            <div class="col-xs-1 col-sm-1 col-md-1 col-md-offset-1 col-lg-1 btn btn-no text-center"><img src="content/images/cross-wrong.png" class="resize"></div>
+            <div class="col-xs-1 col-sm-1 col-md-1 col-md-offset-1 col-lg-1 btn btn-no text-center no"><img src="content/images/cross-wrong.png" class="resize"></div>
             <div class="col-xs-2 col-sm-2 col-md-1 col-lg-2"></div>
-            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 btn btn-yes text-center"><img src="content/images/check-correct.png" class="resize"></div>
+            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 btn btn-yes text-center yes"><img src="content/images/check-correct.png" class="resize"></div>
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"></div>
         </div>
     </div>
-</div>
 
+</div>
+  <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+  <script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
+  <script src="./scripts/swipe.js"></script>
 </body>
 </html>
