--- a/Design/Snippets/index.html
+++ b/Design/Snippets/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <h1>Kinder<span>tinder</span></h1>
+
     <div class="button">
         <div class="icon like">
             <svg enable-background="new 0 0 32 32" id="heart" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path id="like" d="M22.229,4.514c-2.547,0-4.85,1.334-5.919,3.414c-1.07-2.079-3.401-3.414-5.948-3.414  c-3.981,0-9.319,3.209-6.888,11.963C6.251,25.034,16.31,30.065,16.31,30.063c0,0.002,10.044-5.029,12.821-13.586  C31.562,7.723,26.209,4.514,22.229,4.514z"/></svg>
@@ -17,6 +19,10 @@
         <div class="icon dislike">
             <div id="cross"></div>
         </div>
+    </div>
+
+    <div class="picture-container">
+        <div id="photo"></div>
     </div>
 </body>
 </html>
