changes to the mockup, loading data in (index2.html, etc) through the json file

--- a/mockup/index.html
+++ b/mockup/index.html
@@ -69,6 +69,8 @@ Copyright: open Summer of code 2015
 </div>
   <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
   <script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
+  <script src="scripts/script.js"></script>
   <script src="./scripts/swipe.js"></script>
+
 </body>
 </html>
