adjusting data.json for for presentation a bit, index.html changes to the inline-scripts.

--- a/index.html
+++ b/index.html
@@ -323,6 +323,9 @@ Copyright oSoc15
                     );
 
                 });
+
+                $( ".book:nth-of-type(5)" ).before( "</div><div class='row'>");
+                $( ".book:nth-of-type(8)" ).after( "</div>");
             }
 
 
