--- a/index.html
+++ b/index.html
@@ -8,69 +8,9 @@ Copyright oSoc15
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="stylesheets/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="mockup/styles/style.css" rel="stylesheet">
-    <link href="mockup/styles/swipe.css" rel="stylesheet">
+    <link href="stylesheets/style.css" rel="stylesheet">
     <link href="stylesheets/jquery.mobile.min.css" rel="stylesheet">
-    
-    <style>
-        .page-wrapper {
-            margin-top: 60px;
-        }
-        #header {
-            display: none;
-        }
-        .buddy {
-            position: absolute;
-        }
 
-        #step1 .buttons {
-            padding-top: 370px;
-        }
-
-        .detail {
-            position: absolute;
-            top: 0; right: 0; bottom: 0; left: 0;
-            background: rgba(255,255,255,.9);
-        }
-        
-        .detail .bookcover img {
-            height: 655px;
-            width: auto;
-        }
-
-        .detail h1 {
-            margin-top: 0;
-        }
-
-        .button.back {
-            background: none;
-            padding: 10px 40px;
-            font-weight: bold;
-            display: inline-block;
-            border-radius: 3px;
-            text-shadow: none;
-            border: 2px solid #FF5A00;
-            margin-top: 40;
-            font-size: 14px;
-        }
-
-        .buttons .like {
-            background: url("images/like.png") no-repeat;
-            width: 41px;
-            height: 38px;
-            margin: 15px 0 0 13px;
-        }
-
-        .buttons .dislike {
-            background: url("images/dislike.png") no-repeat;
-            width: 38px;
-            height: 37px;
-            margin: 15px 0 0 14px;
-            left: 0 !important;
-        }
-
-
-    </style>
 </head>
 <body>
 
@@ -89,43 +29,29 @@ Copyright oSoc15
 
             <div class="container text-center" id="content">
                 <div class="row">
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 "></div>
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 picture-container">
-                        <div id="container">
-                            <div class="buddy" style="display: block;">
-                                <div class="avatar" style="display: block; background-image: url(mockup/content/images/test-picture.jpg); z-index: 4"></div>
-                            </div>
-                            <div class="buddy">
-                                <div class="avatar" style="display: block; background-image: url(mockup/content/images/test-picture.jpg); z-index: 3"></div>
-                            </div>
-                            <div class="buddy">
-                                <div class="avatar" style="display: block; background-image: url(mockup/content/images/test-picture.jpg); z-index: 2"></div>
-                            </div>
-                            <div class="buddy">
-                                <div class="avatar" style="display: block; background-image: url(mockup/content/images/test-picture.jpg); z-index: 1"></div>
-                            </div>
+                    <div class="picture-container">
+                        <div class="buddy" style="display: block;">
+                            <div class="avatar" style="display: block; background-image: url(images/tag.png); z-index: 4"></div>
+                        </div>
+                        <div class="buddy">
+                            <div class="avatar" style="display: block; background-image: url(images/tag.png); z-index: 3"></div>
+                        </div>
+                        <div class="buddy">
+                            <div class="avatar" style="display: block; background-image: url(images/tag.png); z-index: 2"></div>
+                        </div>
+                        <div class="buddy">
+                            <div class="avatar" style="display: block; background-image: url(images/tag.png); z-index: 1"></div>
                         </div>
                     </div>
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 "></div>
                 </div>
 
                 <div class="row buttons">
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"></div>
-
-                    <div class="col-xs-1 col-sm-1 col-md-1 col-md-offset-1 col-lg-1">
-                        <div class="button yes">
-                            <div class="icon like"></div>
-                        </div>
-
+                    <div class="button yes">
+                        <div class="icon like"></div>
                     </div>
-                    <div class="col-xs-2 col-sm-2 col-md-1 col-lg-2"></div>
-                    <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                        <div class="button no">
-                            <div class="icon dislike"></div>
-                        </div>
+                    <div class="button no">
+                        <div class="icon dislike"></div>
                     </div>
-
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"></div>
                 </div>
             </div>
         </div>
@@ -201,18 +127,19 @@ Copyright oSoc15
                 setDetailTemplate(id);
             });
 
+
+            $("#start").on("click", function() {
+                location.reload();
+            });
+
             function setDetailTemplate(id)
             {
                 var selected = allData[id];
-                $('.title').append(
-                        "<h1>"+ selected.title +"</h1>"
-                );
-                $('.synopsis').append(
-                        "<p>"+ selected.description +"</p>"
-                );
+                $('.title').append(selected.title);
+                $('.synopsis').append(selected.description);
                 $('.writtenby').append(
 
-                        "<p>Geschreven door <strong>" + selected.author + "</strong>"
+                        "Geschreven door <strong>" + selected.author + "</strong>"
                 );
 
                 $('.bookcover').append(
