--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Copyright oSoc15
 
 
             $(document).on("click", ".book", function(){
-                $(overlay).show();
+                $(overlay).fadeIn();
                 var id = $(this).attr("data-id");
                 setDetailTemplate(id);
             });
