--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,3 +1,7 @@
+<!--
+    @author: Shaun Janssens
+    @copyright: open Summer of code
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,8 +31,12 @@
             </div>
 
             <div class="controls">
-                <span id="dislike">Niet leuk</span>
-                <span id="like">Leuk</span>
+                <span id="dislike">
+                    <img src="img/icon-dislike.svg" alt="Niet leuk">
+                </span>
+                <span id="like">
+                    <img src="img/icon-like.svg" alt="Leuk">
+                </span>
             </div>
         </main>
     </section>
