--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet" type="text/css">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.min.css" rel="stylesheet" type="text/css">
 
     <link rel="apple-touch-icon" href="img/apple-icon.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -97,7 +97,7 @@
 <script>if (!window.jQuery) { document.write('<script src="js/jquery.min.js"><\/script>'); }</script>
 
 <script type="text/javascript" src="js/handlebars.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/main.min.js"></script>
 
 </body>
 </html>
