--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,9 +13,12 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet" type="text/css">
     <link href="css/style.min.css" rel="stylesheet" type="text/css">
 
+    <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" href="img/apple-icon.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Bieblo">
+    <meta name="application-name" content="Bieblo">
 </head>
 <body>
 
