changes to view

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -46,8 +46,10 @@
     <section class="page container overview" id="overview" data-page="2">
         <header>
             <h1>Dit zijn jouw <strong>suggesties</strong></h1>
-            <div class="back">
-                <img src="img/refresh.svg" alt="Terug">
+            <div class="icon-container">
+                <img src="img/refresh.svg" alt="Terug" class="icon-refresh">
+                <img src="img/icon-email.svg" alt="Email" class="icon-email">
+                <img src="img/icon-print.svg" alt="Print" class="icon-print">
             </div>
         </header>
 
