--- a/src/html/index.html
+++ b/src/html/index.html
@@ -47,7 +47,7 @@
         <header>
             <h1>Dit zijn jouw <strong>suggesties</strong></h1>
             <div class="icon-container">
-                <img src="img/refresh.svg" alt="Terug" class="icon-home">
+                <img src="img/icon-home.svg" alt="Terug" class="icon-home">
                 <img src="img/icon-email.svg" alt="Email" class="icon-email">
                 <img src="img/icon-print.svg" alt="Print" class="icon-print">
             </div>
