Extra info on first page #23

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,6 +25,7 @@
     <section class="page container swipe" id="swipe" data-page="1">
         <header>
             <h1>Hallo, ik ben <strong>Bieblo</strong></h1>
+            <p>Sleep leuke plaatjes naar rechts, niet leuke naar links.</p>
         </header>
 
         <main>
