--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,7 +24,7 @@
 
     <section class="page container swipe" id="swipe" data-page="1">
         <header>
-            <h1>Hallo, ik ben <strong>Bieblo</strong></h1>
+            <h1>Hallo, ik ben <img src="img/logo-bieblo.svg" alt="Bieblo" /></h1>
         </header>
 
         <main>
