--- a/src/html/index.html
+++ b/src/html/index.html
@@ -70,7 +70,7 @@
 <script>if (!window.jQuery) { document.write('<script src="js/jquery.min.js"><\/script>'); }</script>
 
 <script type="text/javascript" src="js/handlebars.runtime.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/main.min.js"></script>
 
 </body>
 </html>
